--- a/blueprint/src/web.tex
+++ b/blueprint/src/web.tex
@@ -19,7 +19,7 @@
 \dochome{https://YanYablonovskiy.github.io/quadratic_forms_in_lean_wip/docs}
 
 \title{Quadratic Forms in Lean 4}
-\author{Jonathan Hanke}
+\author{Jonathan Hanke and Yan Yablonovskiy}
 
 \begin{document}
 \maketitle
